css/style.css
/* ... */
@media (min-width: 1200px) {

    .btn-prev:hover,
    .btn-next:hover {
        background-color: var(--si-carousel-nav-btn-hover-bg);
        color: var(--si-carousel-nav-btn-hover-color);
        box-shadow: none;
    }
}

.btn-sm {
    padding: 0.375rem 1.25rem;
    font-size: 1rem;
    border-radius: 0.2rem;
}

/*//////////////////////////////////////////////////////////////////
[ ANIMATIONS ]*/

.hover-shine:hover {
    opacity: 1;
    -webkit-animation: flash .8s;
    animation: flash .8s;
}

@-webkit-keyframes flash {
    0% {
        opacity: .65;
    }

    100% {
        opacity: 1;
    }
}

@keyframes flash {
    0% {
        opacity: .65;
    }

    100% {
        opacity: 1;
    }
}

.hover-opacity {
    opacity: 1;
    transition: opacity 0.3s ease;
}

.hover-opacity:hover {
    opacity: .65;
}

.hover-rotate:hover {
    transform: rotate(-15deg);
}

/*//////////////////////////////////////////////////////////////////
[ BASE STYLES ]*/

img {
    display: block;
    max-width: 100%;
    height: auto;
}

.ff-main {
    font-family: var(--ff-main);
}

.ff-title {
    font-family: var(--ff-title);
}

.fw-light,
.fw-300 {
    font-weight: 300;
}

.fw-normal,
.fw-regular,
.fw-400 {
    font-weight: 400;
}

.fw-medium,
.fw-500 {
    font-weight: 500;
}

.fw-semibold,
.fw-600 {
    font-weight: 600;
}

.fw-bold,
.fw-700 {
    font-weight: 700;
}

.fz-12 {
    font-size: 1rem;
}

.fz-15 {
    font-size: 1.25rem;
}

.fz-17 {
    font-size: 1.5rem;
}

.fz-2 {
    font-size: 1.75rem;
}

@media (min-width: 992px) {

    .fz-12 {
        font-size: 1.25rem;
    }
    .fz-15 {
        font-size: 1.5rem;
    }
    .fz-17 {
        font-size: 1.75rem;
    }
    .fz-2 {
        font-size: 2rem;
    }
}

@media (min-width: 2560px) {

    .fz-12 {
        font-size: 2.5rem;
    }
    .fz-15 {
        font-size: 3.5rem;
    }
    .fz-17 {
        font-size: 3.75rem;
    }
    .fz-2 {
        font-size: 4rem;
    }
}

.lh-4 {
    line-height: 1.5;
}

.bg-img {
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
}

.color-black {
    color: var(--color-black);
}

.color-blue {
    color: var(--color-blue);
}

.color-deep-blue {
    color: var(--color-deep-blue);
}

.color-grey {
    color: var(--color-grey);
}

.color-white {
    color: var(--color-white);
}

.color-black-hover:hover {
    color: var(--color-black);
}

.color-blue-hover:hover {
    color: var(--color-blue);
}

.color-deep-blue-hover:hover {
    color: var(--color-deep-blue);
}

.color-grey-hover:hover {
    color: var(--color-grey);
}

.color-white-hover:hover {
    color: var(--color-white);
}

.bg-color-black {
    background-color: var(--color-black);
}

.py-6 {
    padding-top: 5rem !important;
    padding-bottom: 5rem !important;
}

.py-7 {
    padding-top: 7rem !important;
    padding-bottom: 7rem !important;
}

.pt-7 {
    padding-top: 7rem !important;
}

.pb-7 {
    padding-bottom: 7rem !important;
}

.z-index-130 {
    z-index: 130;
}

.dropdown-toggle::after {
    content: '\ea4a';
    font-family: "boxicons";
    font-size: 1.15rem;
    font-weight: normal;
    vertical-align: middle !important;
    border: none !important;
    line-height: 1;
}

.dropdown-menu {
    --bs-dropdown-zindex: 1000;
    --bs-dropdown-min-width: 12rem;
    --bs-dropdown-padding-x: 0;
    --bs-dropdown-padding-y: 0.5rem;
    --bs-dropdown-spacer: 0.25rem;
    --bs-dropdown-font-size: 1rem;
    --bs-dropdown-color: var(--color-black);
    --bs-dropdown-bg: #fff;
    --bs-dropdown-border-color: #fff;
    --bs-dropdown-border-radius: 0.375rem;
    --bs-dropdown-border-width: 1px;
    --bs-dropdown-inner-border-radius: calc(0.375rem - 1px);
    --bs-dropdown-divider-bg: #e2e5f1;
    --bs-dropdown-divider-margin-y: 0.375rem;
    --bs-dropdown-box-shadow: 0 0.275rem 1.25rem rgba(11, 15, 25, 0.05), 0 0.25rem 0.5625rem rgba(11, 15, 25, 0.03);
    --bs-dropdown-link-color: var(--color-black);
    --bs-dropdown-link-hover-color: var(--color-blue);
    --bs-dropdown-link-hover-bg: #fff;
    --bs-dropdown-link-active-color: #fff;
    --bs-dropdown-link-active-bg: var(--color-black);
    --bs-dropdown-link-disabled-color: #adb5bd;
    --bs-dropdown-item-padding-x: 1rem;
    --bs-dropdown-item-padding-y: 0.25rem;
    --bs-dropdown-header-color: #6c757d;
    --bs-dropdown-header-padding-x: 1rem;
    --bs-dropdown-header-padding-y: 0.5rem;
}

.nav {
    --bs-nav-link-padding-x: 1rem;
    --bs-nav-link-padding-y: 0.5rem;
    --bs-nav-link-font-weight: ;
    --bs-nav-link-color: var(--color-black);
    --bs-nav-link-hover-color: var(--color-blue);
    --bs-nav-link-disabled-color: #6c757d;
}

.nav-pills {
    --bs-nav-pills-border-radius: 2.25rem;
    --bs-nav-pills-link-active-color: var(--color-black);
    --bs-nav-pills-link-active-bg: #D9D9D9;
}

.nav-pills .nav-link {
    font-size: 1.25rem;
    text-transform: uppercase;
}
/* ... */

